DCRProj/force-app/main/default/objects/DCR__c/DCR__c.object-meta.xml
<CustomObject>
    <label>DCR</label>
    <nameField>
        <displayFormat>DCR-{000000}</displayFormat>
        <label>DCR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DCR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>