DCRProj/force-app/main/default/objects/DCR__c/fields/Account_of_DCR__c.field-meta.xml
<CustomField>
    <fullName>Account_of_DCR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account of DCR</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DCR</relationshipLabel>
    <relationshipName>DCRs</relationshipName>
    <type>Lookup</type>
</CustomField>