DCRProj/force-app/main/default/objects/DCR__c/fields/AddressC_of_DCR__c.field-meta.xml
<CustomField>
    <fullName>AddressC_of_DCR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AddressC of DCR</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>DCR</relationshipLabel>
    <relationshipName>DCRAddress</relationshipName>
    <type>Lookup</type>
</CustomField>